<resources>
    <string name="app_name">KARABA</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="show_commands">My Orders</string>
    <string name="my_commands">Orders</string>
    <string name="title_activity_my_commands">Orders</string>
    <string name="ok">ok</string>
    <string name="restaurant_name_sample">CASTAS</string>
    <string name="network_error">Network Error. Press the Button to try again</string>
    <string name="try_again">Try Again</string>
    <string name="sys_error">Sorry for the disconvenience, The server is encountering an Error.</string>
    <string name="total">TOTAL:</string>
    <string name="title_activity_login">LOGIN</string>
    <string name="confirm">Confirm</string>
    <string name="password">Password</string>
    <string name="i_login">Login</string>
    <string name="there_is_no_command">There is no command in this category yet.</string>
    <string name="last_update_content">29 Jan 23:04</string>
    <string name="content_on_loading">Please wait... </string>
    <string name="contact">Contact</string>
    <string name="title_activity_command_details">Command Details</string>
    <string name="your_contact">Your contact</string>
    <string name="action_logout">Logout</string>
    <string name="today">Today</string>
    <string name="action_cancel">ANNULER</string>
    <string name="press_again_to_exit">Please, double press to exit.</string>
    <string name="restaurant_login">RESTAURANT - LOGIN</string>
    <string name="username">Username</string>
    <string name="sent_to_cooking">Thanks for Sending the food at cooking process.</string>
    <string name="ireturn">Return</string>
    <string name="select_shipping_man">Select Shipping man</string>
    <string name="there_is_no_shipping_man">Sorry ! No - Shipping - Man Available</string>
    <string name="please_select_shipping_man">Please select a shipping man</string>
    <string name="sent_to_delivering">Thanks for Sending the food at delivering process.</string>
    <string name="command_new">You have a new command</string>
    <string name="waiting">WAITING</string>
    <string name="cooking">COOKING</string>
    <string name="shipping">SHIPPING</string>
    <string name="delivered">DELIVERED</string>
    <string name="others">OTHERS</string>
    <string name="title_waiting">Waiting</string>
    <string name="title_others">Others</string>
    <string name="title_delivered">Delivered</string>
    <string name="title_shipping">Shipping</string>
    <string name="title_cooking">Cooking</string>
    <string name="your_quartier">District</string>
    <string name="client_contact">Client Contact</string>
    <string name="kaba_man">KabaMan</string>
    <string name="kaba_man_phone">KabaMan Phone</string>
    <string name="kaba_man_photo">Photo</string>
    <string name="statistics_of_restaurant">Statistics</string>
    <string name="quantity_sold">Orders</string>
    <string name="price_sold">TODAY SALES</string>
    <string name="quantity_sold_value">---</string>
    <string name="price_sold_value">---</string>
    <string name="actions_of_restaurant">My Actions</string>
    <string name="menu_stats">Statistics</string>
    <string name="is_open">opened</string>
    <string name="is_opened">Opened</string>
    <string name="is_closed">Closed</string>
    <string name="cancel_reason">Please Select the reason of your action:</string>
    <string name="action_confirm">Confirm</string>
    <string name="stats_activity">SELLS STATISTICS</string>
    <string name="customer_adress_near">Not far from</string>
    <string name="last_update">"Last update: "</string>
    <string name="post_pay">PAY AT ARRIVAL</string>
    <string name="livreur_is_available">AVAILABLE</string>
    <string name="livreur_is_busy">BUSY</string>
    <string name="sorry_kabaman_not_available">Sorry, this kabaman is not available.</string>
    <string name="confirm_shipping_done">Confirmez la livraison de la commande</string>
    <string name="title_home">Home</string>
    <string name="title_restaurant">Restaurant</string>
    <string name="title_shopping_card">Cart</string>
    <string name="title_command_list">Commands</string>
    <string name="title_myaccount">Account</string>
    <string name="action_message_box">Messages</string>
    <string name="hello_blank_fragment">"Hello "</string>
    <string name="title_activity_menu_content">MenuContentActivity</string>
    <string name="title_activity_restaurant_menu">RestaurantMenuActivity</string>
    <string name="restaurant_adress_sample">Kégué, 100m away from Stadium</string>
    <string name="restaurant_contact_sample">0022890909090</string>
    <string name="menu_food_item_name_sample">HAMBURGER STEAK</string>
    <string name="menu_food_item_price_sample">1500FCFA</string>
    <string name="restaurant">RESTAURANT</string>
    <string name="update_done">UPDATE FINISHED</string>
    <string name="update_no_needed">UPDATE NOT NEEDED</string>
    <string name="title_activity_web">WEBACTIVITY</string>
    <string name="title_activity_geo">GEOACTIVITY</string>
    <string name="register_account">REGISTER AN ACCOUNT</string>
    <string name="register">Register</string>
    <string name="full_name">Full name</string>
    <string name="phone_number">Phone Number</string>
    <string name="login">CONNEXION</string>
    <string name="title_activity_service_client">CUSTOMER SERVICE</string>
    <string name="service_client">CUSTOMER SERVICE</string>
    <string name="call_customers">"CALL "</string>
    <string name="sav_name">"CUSTOMER "</string>
    <string name="sav_type_ur_message">SERVICE</string>
    <string name="my_adresses">MY ADDRESSES</string>
    <string name="title_activity_my_adresses">MyAdressesActivity</string>
    <string name="home">Maison Agoè</string>
    <string name="details_adress_sample">Agbalépédogan, En face de la Gare Routière</string>
    <string name="title_activity_edit_address">EditAddressActivity</string>
    <string name="command_shipping">Shipping: We are shipping your command right now! Please get ready to receive.</string>
    <string name="command_rejected">Sorry: Your command has been rejected by the Restaurant.</string>
    <string name="command_end_shipping">Congratulations: Your command has successfully ended.</string>
    <string name="command_cancelled">Sorry: Your command has been cancelled</string>
    <string name="command_preparing">Hi: Your command is preparing.</string>
    <string name="share_on_platform">Hi. I just discovered this amazing service on %1$s. Check out the link below and experience it yourself.</string>
    <string name="wha_not_installed">Sorry, You don\'t have Whatsapp Installed.</string>
    <string name="icontinue">Buy</string>
    <string name="purchase_success">Congratulations , your purchase is done. Sit tight and wait for the food to get to you.</string>
    <string name="purchase_failure">Sorry, Purchase Failed.</string>
    <string name="title_activity_restaurant">Restaurant_Activity</string>
    <string name="enter_restaurant">HOME</string>
    <string name="enter_menu">Menu</string>
    <string name="article_may_have_problem">This article may have a problem. Please try again later. Sorry for the Inconvinience!</string>
    <string name="there_is_no_food_in_basket">You haven\'t put no food yet in the Basket.</string>
    <string name="title_activity_web_article">WebArticleActivity</string>
    <string name="data_error">Data Error</string>
    <string name="buy_now">BUY NOW</string>
    <string name="restaurant_no_drinks">Sorry, This restaurant has no drinks to offer.</string>
    <string name="title_activity_test__notification">Test_NotificationActivity</string>
    <string name="default_notification_channel_id">default_notifaction_channel_id</string>
    <string name="feature_not_yet_available">This feature will be available in a later version.</string>
    <string name="please_choose_delivery_address">Please, select the delivery location</string>
    <string name="add_to_basket_successfull">Your choice has been successfully added to the basket.</string>
    <string name="press_to_add_to_basket">Press to add to basket</string>
    <string name="delete_before_adding_more">Max Count 5 reached</string>
    <string name="details_adress_date">02 Fev 2016</string>
    <string name="title_activity_confirm_command_details">Confirm</string>
    <string name="quantity_to_much">Quantity Too Much</string>
    <string name="quantity_cannot_less">Quantity cannot go less</string>
    <string name="no_additionnal_drinks">There is no additionnal drinks</string>
    <string name="add_remove_favorite">+- Favorite</string>
    <string name="a_problem_happenned">A problem happened</string>
    <string name="address_deleted_success">Address deleted Successfully</string>
    <string name="bt_delete">Delete</string>
    <string name="are_you_sure_delete">You are going to delete an Address! Do you want to continue?</string>
    <string name="confirmation">Confirmation</string>
    <string name="map_coordonates_invalid">Coordinates of Map Invalid</string>
    <string name="details_adress_country">Agbalépédogan, En face de la Gare Routière</string>
    <string name="sav_location_name">Name Of Location</string>
    <string name="add_country">Country</string>
    <string name="add_city">City</string>
    <string name="add_qte">District</string>
    <string name="add_details">Addresses details</string>
    <string name="add_phone">Phone number</string>
    <string name="cancel">CANCEL</string>
    <string name="save">Save</string>
    <string name="sav_call">CALL</string>
    <string name="sav_service">SERVICE</string>
    <string name="sav_customer">CUSTOMER</string>
    <string name="action_add_address">CREATE NEW ADDRESS</string>
    <string name="add_gps_address">ADD GPS LOCATION</string>
    <string name="this_is_location">This is your current location</string>
    <string name="title_activity_personnal_info">Me</string>
    <string name="your_name">Full Name</string>
    <string name="your_nick_name">Nick Name</string>
    <string name="your_gender">Genre</string>
    <string name="your_birth_date">Birth Date</string>
    <string name="title_activity_news_feed">NewsFeedActivity</string>
    <string name="my_news_feed">NEWSFEED</string>
    <string name="feeds_message">We are happy to announce you that we wont be available for the delivery service from to ...</string>
    <string name="title_activity_solde">SoldeActivity</string>
    <string name="solde_payment_historic">HISTORIC</string>
    <string name="solde_recharge">TOP UP</string>
    <string name="solde_transfert">TRANSFERT</string>
    <string name="ad_rectangle_test">EAT MORE HEALTY!!!</string>
    <string name="myaccount_commands">COMMANDS</string>
    <string name="myaccount_bon_dachat">VOUCHER</string>
    <string name="myaccount_favorite_plat">FAVORITES</string>
    <string name="myaccount_delivery_address">ADRESSES</string>
    <string name="myaccount_client_service">CUSTOMER</string>
    <string name="myaccount_settings">SETTINGS</string>
    <string name="restaurant_load_error">Sorry, There is no restaurant to show. Please Refresh The Application.</string>
    <string name="retry">Try Again</string>
    <string name="no_menu_data">No menu data</string>
    <string name="delivery_district">Quartier de livraison</string>
    <string name="please_insert_delivery_district">Please insert the delivery zone</string>
    <string name="delivery_fees">Delivery fees</string>
    <string name="customer_phone_number">Customer Phone number</string>
    <string name="order_food_amount">Order food amount</string>
    <string name="order_more_informations">More informations</string>
    <string name="reset">RESET</string>
</resources>