<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_waiting"
        android:icon="@drawable/ic_navigation_waiting_24dp"
        android:title="@string/title_waiting" />

    <item
        android:id="@+id/navigation_cooking"
        android:icon="@drawable/ic_navigation_cooking_24dp"
        android:title="@string/title_cooking" />

    <item
        android:id="@+id/navigation_shipping"
        android:icon="@drawable/ic_navigation_shipping_24dp"
        android:title="@string/title_shipping" />

    <item
        android:id="@+id/navigation_delivered"
        android:icon="@drawable/ic_navigation_delivered_24dp"
        android:title="@string/title_delivered" />

    <item
        android:id="@+id/navigation_others"
        android:icon="@drawable/ic_navigation_others_24dp"
        android:title="@string/title_others" />

</menu>
