<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_message"
        android:text="@string/cancel_reason"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <RadioGroup
        android:id="@+id/radiogroup_motive"
        android:padding="@dimen/activity_horizontal_margin_half"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/bt_confirm"
            android:layout_margin="@dimen/activity_horizontal_margin_half"
            android:background="@drawable/bg_green_rounded"
            android:text="@string/action_confirm"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/bt_cancel"
            android:layout_margin="@dimen/activity_horizontal_margin_half"
            android:background="@drawable/bg_red_cornered"
            android:text="@string/action_cancel"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>