<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.menu.RestaurantMenuActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbarlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:background="@color/colorPrimary">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:contentScrim="@color/colorPrimary"
            app:statusBarScrim="@android:color/transparent"
            app:titleEnabled="false">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:background="?selectableItemBackground"
                        android:id="@+id/iv_edit_menu"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/edit_menu"
                        android:layout_marginRight="@dimen/activity_horizontal_margin_half"
                        android:layout_width="30dp"
                        android:layout_height="30dp"/>

                </RelativeLayout>

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
        android:layout_below="@+id/appbarlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <!-- content -->
        <LinearLayout
            android:id="@+id/lny_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <RelativeLayout
                android:visibility="visible"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:padding="@dimen/menu_header_spacing"
                android:gravity="center"
                android:background="@color/transparent">

                <TextView
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:textColor="@color/red"
                    android:text="This is Your Menu as the client sees it ! Please confirm."
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:background="@color/transparent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >
                <FrameLayout
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <LinearLayout
                        android:id="@+id/lny_container"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">
                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rec_menu_list"
                            android:layout_width="0dp"
                            android:layout_weight="3"
                            android:background="@color/extra_light_gray"
                            android:layout_height="match_parent" />

                        <FrameLayout
                            android:id="@+id/frame_container"
                            android:layout_weight="7"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"/>
                    </LinearLayout>

                    <TextView
                        android:id="@+id/tv_no_menu"
                        android:visibility="gone"
                        android:gravity="center_horizontal"
                        android:textColor="@color/dark_gray"
                        android:layout_margin="@dimen/activity_horizontal_margin"
                        android:text="@string/no_menu_data"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        />

                </FrameLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

        <!-- inner page error -->
        <LinearLayout
            android:layout_gravity="center"
            android:gravity="center"
            android:id="@+id/lny_error_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_messages"
                android:gravity="center_horizontal"
                android:textColor="@color/dark_gray"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:text="@string/restaurant_load_error"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />

            <Button
                android:id="@+id/bt_tryagain"
                android:text="@string/retry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_red_cornered"
                android:textColor="@color/white"
                android:padding="@dimen/activity_horizontal_margin_half"
                />

        </LinearLayout>

        <!-- loading frame -->
        <LinearLayout
            android:id="@+id/lny_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center">

            <tg.tmye.kaba.restaurant.cviews.CustomProgressbar
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:id="@+id/progress_bar"
                android:indeterminateTint="@color/colorPrimary"
                android:layout_width="@dimen/webview_circle_progressbar_size"
                android:layout_height="@dimen/webview_circle_progressbar_size" />

        </LinearLayout>

    </FrameLayout>

    <!--    <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_chart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_margin="@dimen/fab_margin"
            app:backgroundTint="@color/colorPrimary_rm"
            app:srcCompat="@drawable/ic_shopping_card_yellow_24dp" />-->
</androidx.coordinatorlayout.widget.CoordinatorLayout>